syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message _blank {}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message CreateOrderRequest {
  float price = 1;
  float tax = 2;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(_blank) returns (ListOrdersResponse);
  rpc ListOrdersStream(_blank) returns (stream Order);
}